syntax = "proto3";

package Api.summonboss;

import "global.proto";

/****************************************
 *                                      *
 *          Summon Boss                 *
 *                                      *
 ****************************************/

// 开始战斗
message startFight {
    message Request {
        FightTeam team  = 1;  //英雄队伍
    }
    message Response {
        Error error = 1;
        string randomSeed = 2; // 随机种子
        repeated FightLoot fightLootArray = 3;  // 战斗掉落随机结果
        uint32 leftSlay = 4;       // 剩余怒气值
        repeated FightHero hireFriendList = 5;
    }
}

// 完成战斗
message finishFight {
    message Request {
        uint32 result = 1;     // 0: failed, 1: success, 2: flee
        uint32 totalRound = 2;     // 总共回合
        repeated uint32 useSlayRound = 3;   // 使用怒气回合列表
        repeated uint32 restoreRound = 4;   // 买活回合数列表
        repeated uint32 specialRound = 5;   // 买大招回合数
    }
    message Response {
        Error error = 1;
        uint32 bossID = 2;
        uint32 bossLeftHp = 3;
    }
}

// 召唤boss
message summonBoss {
    message Request {
        uint32 bossID  = 1;  //bossID
    }
    message Response {
        Error error = 1;
        uint32 bossID = 2;
        uint32 bossLeftHp = 3;
    }
}

message selectTeam {
    message Request {
        FightTeam team  = 1;  //英雄队伍
    }
    message Response {
        Error error = 1;
        uint32 bossId = 2;
        uint32 bossHp = 3;
        repeated FightHero hireFriendList = 4;
    }
}

// 召唤boss上线包
message initInfo {
    message Notify {
        repeated uint32 bossList = 1;
        uint32 bossID = 2;     // 0 表示没有
        uint32 bossLeftHp = 3;     //
        FightTeam team  = 4;  //英雄队伍
    }
}

// 召唤boss更新包
message updateInfo {
    message Notify {
        repeated uint32 newBossList  = 1;
    }
}